# NEW_Steretracker-master

./: .gitignore  CLAUDE.md  CMakeLists.txt  FEATURE_EXTRACTION_SPEC.md  PORTING_REPORT.md  README.md  dockerfile_0620  main.cpp
config/: tracker_config.json
data/NewMuBan(reordered)/: 0_degrees.txt  105_degrees.txt  120_degrees.txt  135_degrees.txt  150_degrees.txt  15_degrees.txt  165_degrees.txt  180_degrees.txt  195_degrees.txt  210_degrees.txt  225_degrees.txt  240_degrees.txt  255_degrees.txt  270_degrees.txt  285_degrees.txt  300_degrees.txt  30_degrees.txt  315_degrees.txt  330_degrees.txt  345_degrees.txt  45_degrees.txt  60_degrees.txt  75_degrees.txt  90_degrees.txt
extracted_input_system/: ARCHITECTURE.md  CMakeLists.txt
extracted_input_system/can_socket/: can_socket.cpp  can_socket.hpp
extracted_input_system/time_alignment/: timeAlignment.cpp  timeAlignment.hpp
include/common/: Config.hpp  GeometryUtils.hpp  LogConfig.hpp  Types.hpp
include/detection/: RoiGenerator.hpp  YoloDetector.hpp  YoloRoiProvider.hpp
include/feature/: AkazeExtractor.hpp  AkazeGpnpExtractor.hpp  BinaryCornerExtractor.hpp  FeatureExtractor.hpp  MadDisparityFilter.hpp  OpticalFlowTracker.hpp  TinyTargetExtractor.hpp
include/input/: DirectoryStereoSource.hpp  FileStereoSource.hpp  IStereoImageSource.hpp  InputConfig.hpp  InputProvider.hpp  RingBuffer.hpp  SensorTypes.hpp  SequenceSource.hpp
include/matching/: TemplateMatcher.hpp
include/pose/: GPnPSolver.hpp  InitialPnPSolver.hpp  MonoPnPSolver.hpp
include/stereo/: StereoProjector.hpp
include/tracker/: StereoTracker.hpp
include/utils/: PoseUtils.hpp
include/visualization/: Visualizer.hpp
src/detection/: RoiGenerator.cpp  YoloRoiProvider.cpp
src/feature/: AkazeExtractor.cpp  AkazeGpnpExtractor.cpp  BinaryCornerExtractor.cpp  MadDisparityFilter.cpp  OpticalFlowTracker.cpp  TinyTargetExtractor.cpp
src/input/: DirectoryStereoSource.cpp  FileStereoSource.cpp  InputProvider.cpp  SequenceSource.cpp
src/matching/: TemplateMatcher.cpp
src/pose/: GPnPSolver.cpp  InitialPnPSolver.cpp  MonoPnPS  MonoPnPSolver.cpp
src/stereo/: StereoProjector.cpp
src/tracker/: StereoTracker.cpp
src/utils/: PoseUtils.cpp
src/visualization/: Visualizer.cpp
